# PRML_Code

./: .gitattributes  .gitignore  README.md  package-lock.json
src/: CMakeLists.txt  readme.md
src/docs/: Doxyfile  readme.md
src/docs/html/: annotated.html  annotated_dup.js  classes.html  common__macro_8c.html  common__macro_8h.html  common__macro_8h_source.html  config__read_8c.html  config__read_8h.html  config__read_8h_source.html  dir_125a563b33645f6b8456208df8f7b844.html  dir_1e3aa729d5d365963cce2d1c75553e9a.html  dir_1f5f4ad905d3feabd255247410f5a848.html  dir_1f5f4ad905d3feabd255247410f5a848.js  dir_21ac3939c242d252ab123d94e11dd3e4.html  dir_21ac3939c242d252ab123d94e11dd3e4.js  dir_242038dc400b9cf1ca5d41de8fbfc43f.html  dir_2c10fc87328de5c26540838efee33d54.html  dir_2f1ff469cea8115b8f2b722921cfc809.html  dir_2f1ff469cea8115b8f2b722921cfc809.js  dir_4093410e635c35cf572f114b79497052.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_58e7662020b7d804dd5eb15cba71e15e.html  dir_60466459e6ec4823b5d72b67e5a2eb8b.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6549bedf82156dc06df95cefb015444e.html  dir_6b3a6bd66f4050ea5cb06a87acd7f2a3.html  dir_6d913f1a29bc83bc6f11f05d9ca2783a.html  dir_72c3a2409e8bb00022aa8f3af556f4da.html  dir_7545427d639d4b9ef5364126e2bd39db.html  dir_8584dc271cb71eeb7147ba2733dc9164.html  dir_9838d0216eeba45f9f379f53bdc3258e.html  dir_a0a42c116c5b6ee93488869bc664da8e.html  dir_a0a42c116c5b6ee93488869bc664da8e.js  dir_bdd3c1e72ab473d6042779bacf690b71.html  dir_cc6426f6f0beeab4b5d58d50074e5d50.html  dir_e6b2b31f4762273d3a6e7f7cf9ea4f34.html  (+78 more)
src/docs/latex/: annotated.tex  (+42 more)
src/hw1/: fig1.gp  fig2.gp  fig3.gp  fig4.gp  readme.md
src/hw2/: data_gen.py  data_plot.c  data_plot.h  data_proc.c  main.c  makefile  normal_distribution.c  normal_distribution.h  output_format.h  readme.md  test.c
src/hw3/: CMakeLists.txt  gen_shape.gp  main.c  makefile  readme.md
src/hw4/: CMakeLists.txt  config.ini  config_test.c  config_test.ini  main.c  readme.md
src/hw5/: readme.md
src/libc/: common_macro.c  common_macro.h  decision_boundary.h  distance.c  distance.h  intersection.c  intersection.h  normal_distribution.h  output_format.c  output_format.h  random.c  random.h  signal_handler.c  signal_handler.h  terminal_operation.c  terminal_operation.h
src/script/: readme.md  runner.ps1  runner.sh
src/w2/: data_plot.c  data_plot.h  data_proc.c  data_proc.h  main.c  makefile  readme.md
(+109 files in other folders)
